# charm-manila-csi

./: .gitignore  CONTRIBUTING.md  README.md  charmcraft.yaml  dispatch  pyproject.toml  tox.ini
charts/: openstack-manila-csi-2.35.0.tgz
manifests/: manila-csi-values.yaml  manila-secret.yaml  nfs-csi-values.yaml  snapshot-restore-pvc.yaml  storage-class.yaml  volume-snapshot-class.yaml  volume-snapshot.yaml
src/: charm.py  manila_csi.py
tests/integration/: conftest.py  test_charm.py
tests/unit/: test_charm.py
